refactor(chat): update DTO types, add pagination, improve query performance