@@ -3,7 +3,6 @@ package com.jobhunter.jobhunter_be.service.impl;
 import com.jobhunter.jobhunter_be.dto.request.ConversationRequest;
 import com.jobhunter.jobhunter_be.dto.response.ConversationDetailResponse;
 import com.jobhunter.jobhunter_be.dto.response.ConversationListResponse;
-import com.jobhunter.jobhunter_be.dto.response.UserResponse;
 import com.jobhunter.jobhunter_be.entity.Conversation;
 import com.jobhunter.jobhunter_be.entity.ConversationParticipant;
 import com.jobhunter.jobhunter_be.entity.Message;
@@ -15,11 +14,15 @@ import com.jobhunter.jobhunter_be.repository.MessageRepository;
 import com.jobhunter.jobhunter_be.repository.UserRepository;
 import com.jobhunter.jobhunter_be.service.IConversationService;
 import lombok.RequiredArgsConstructor;
+
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -31,45 +34,44 @@ public class ConversationServiceImpl implements IConversationService {
     private final UserRepository userRepository;
     private final MessageRepository messageRepository;
 
+
+    @SneakyThrows
     @Override
-    public ConversationDetailResponse createConversation(ConversationRequest request) throws NotFoundException {
-        List<Long> participantIds = request.getParticipantIds();
+    public ConversationDetailResponse createConversation(ConversationRequest request) {
+        List<String> participantEmails = request.getParticipantEmails();
 
-        // Check tồn tại conversation 1-1
-        if (participantIds.size() == 2) {
-            Long userA = participantIds.get(0);
-            Long userB = participantIds.get(1);
+        String userA = participantEmails.get(0);
+        String userB = participantEmails.get(1);
 
-            // Tìm conversation có đúng 2 participant này
-            List<Long> conversationIdsUserA = participantRepository.findConversationIdsByUserId(userA);
-            List<Long> conversationIdsUserB = participantRepository.findConversationIdsByUserId(userB);
-
-            // Lấy conversation chung của 2 người
-            conversationIdsUserA.retainAll(conversationIdsUserB);
-
-            if (!conversationIdsUserA.isEmpty()) {
-                // Lấy conversation đầu tiên đã tồn tại
-                Long existingConversationId = conversationIdsUserA.getFirst();
-                return getConversationById(existingConversationId);
-            }
+        Optional<Long> conversationId = conversationRepository.findConversationIdBtwUsers(userA, userB);
+        if (conversationId.isPresent()) {
+            return getConversationById(conversationId.get());
         }
 
-        // Nếu chưa tồn tại, tạo mới
         Conversation conversation = conversationRepository.save(Conversation.builder().build());
-        List<UserResponse> participants = new ArrayList<>();
 
-        for (Long userId : participantIds) {
-            User user = userRepository.findById(userId)
-                    .orElseThrow(() -> new NotFoundException("User not found"));
+        List<User> users = participantEmails.stream()
+                .map(email -> {
+                    try {
+                        return getUser(email);
+                    } catch (NotFoundException e) {
+                        throw new RuntimeException(e);
+                    }
+                })
+                .toList();
 
-            ConversationParticipant cp = ConversationParticipant.builder()
-                    .conversation(conversation)
-                    .user(user)
-                    .build();
-            participantRepository.save(cp);
+        List<ConversationParticipant> participantsEntity = users.stream()
+                .map(user -> ConversationParticipant.builder()
+                        .conversation(conversation)
+                        .user(user)
+                        .build())
+                .toList();
 
-            participants.add(mapUserToResponse(user));
-        }
+        participantRepository.saveAll(participantsEntity);
+
+        List<User> participants = users.stream()
+                .map(this::toMinimalUser)
+                .toList();
 
         return ConversationDetailResponse.builder()
                 .id(conversation.getId())
@@ -85,10 +87,10 @@ public class ConversationServiceImpl implements IConversationService {
                 .orElseThrow(() -> new NotFoundException("Conversation not found with id: " + id));
 
         List<ConversationParticipant> participants = participantRepository.findByConversation(conversation);
-        List<UserResponse> userResponses = participants.stream()
-                .map(cp -> mapUserToResponse(cp.getUser()))
+        List<User> userResponses = participants.stream()
+                .map(cp -> toMinimalUser(cp.getUser()))
                 .collect(Collectors.toList());
-        List<Message> messages = messageRepository.findByConversationId(id);
+        List<Message> messages = messageRepository.findByConversation_Id(id);
 
         return ConversationDetailResponse.builder()
                 .id(conversation.getId())
@@ -99,35 +101,46 @@ public class ConversationServiceImpl implements IConversationService {
     }
 
     @Override
-    public List<ConversationListResponse> getAllConversationsByUserId(Long userId) throws NotFoundException {
-        // Check if user exists
-        if (!userRepository.existsById(userId)) {
-            throw new NotFoundException("User not found with id: " + userId);
+    public List<ConversationListResponse> getAllConversationsByEmail(String email) throws NotFoundException {
+        if (!userRepository.existsByEmail(email)) {
+            throw new NotFoundException("User not found with email: " + email);
         }
-        List<Conversation> conversations = conversationRepository.findAllByUserId(userId);
-        return conversations.stream().map(conversation -> {
-            Message lastMessage = messageRepository.findLastMsgByConversationId(conversation.getId());
-            List<User> participants = participantRepository.findParticipantsByConversationId(conversation.getId());
-            User partner = participants.stream()
-                    .filter(u -> u.getId() != userId.intValue())
-                    .findFirst()
-                    .orElse(null);
-            return ConversationListResponse.builder()
-                    .id(conversation.getId())
-                    .lastMsg(lastMessage.getContent())
-                    .lastMsgTime(lastMessage.getCreateAt())
-                    .partnerName(partner != null ? partner.getName() : "Unknown")
-                    .partnerAvatar(partner != null && partner.getProfile() != null
-                            ? partner.getProfile().getAvatar()
-                            : "https://res.cloudinary.com/dhsv9jnul/image/upload/v1753185959/avatar-default_gvywqr.webp")
-                    .build();
-        }).collect(Collectors.toList());
+
+        Set<Long> conversationsId = conversationRepository.findAllByUserEmail(email);
+
+        return conversationsId.stream()
+                .map(conversationId -> mapToConversationListResponse(conversationId, email))
+                .toList();
     }
 
-private UserResponse mapUserToResponse(User user) {
-    return UserResponse.builder()
-            .id(user.getId())
-            .fullname(user.getName())
-            .build();
-}
+    private ConversationListResponse mapToConversationListResponse(Long conversationId, String email) {
+        Message lastMessage = messageRepository.findLastMsgByConversationId(conversationId);
+        List<User> participants = participantRepository.findParticipantsByConversationId(conversationId);
+
+        User partner = participants.stream()
+                .filter(u -> !Objects.equals(u.getEmail(), email))
+                .findFirst()
+                .orElse(null);
+
+        return ConversationListResponse.builder()
+                .id(conversationId)
+                .lastMsg(lastMessage != null ? lastMessage.getContent() : "")
+                .lastMsgTime(lastMessage != null ? lastMessage.getCreateAt() : null)
+                .partnerName(partner != null ? partner.getName() : "Unknown")
+                .partnerAvatar(partner != null && partner.getProfile() != null
+                        ? partner.getProfile().getAvatar()
+                        : "https://res.cloudinary.com/dhsv9jnul/image/upload/v1753185959/avatar-default_gvywqr.webp")
+                .build();
+    }
+
+    private User toMinimalUser(User user) {
+        return User.builder()
+                .id(user.getId())
+                .email(user.getEmail())
+                .build();
+    }
+    private User getUser(String email) throws NotFoundException {
+        return userRepository.findByEmail(email)
+                .orElseThrow(() -> new NotFoundException("User not found"));
+    }
 }
